--- a/Luca/WebContent/NewFile.html
+++ b/Luca/WebContent/NewFile.html
@@ -48,15 +48,17 @@
 </div>
 
   </div>
-</div>
+
   <div id="timer"></div>
+  </div>
 
-
-
-
+  <div id="buoncomp"></div>
+<div class="footer"><h1>sei scemo</h1></div>
 
 
 <footer>
+
+  <div class="footer"><h1>sei scemooooo ajsbdiasbd inn nij bqinbdinain njn nain</h1></div>
 
 </footer>
 
