--- a/Luca/WebContent/NewFile.html
+++ b/Luca/WebContent/NewFile.html
@@ -1,64 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Luca 18</title>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<script src="Timer.js"></script>
-  <link rel="stylesheet" href="NewFile.css">
-  <script src="text.js"></script>
+    <title>Luca 18</title>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
+    <script src="Timer.js"></script>
+    <link rel="stylesheet" href="NewFile.css">
+    <script src="text.js"></script>
 </head>
 <body>
 
+<div id="buoncomp"></div>
+<div id="frase"></div>
+
 <div class="container">
+    <div class="palloncini">
 
-  <div class="palloncini">
+        <div class="balloon white">
+            <div class="star-red"></div>
+            <div class="face">
+                <div class="eye"></div>
+                <div class="eye2"></div>
+                <div class="mouth happy"></div>
+            </div>
+            <div class="triangle"></div>
+            <div class="string"></div>
+        </div>
 
-    <div class="balloon white">
-    <div class="star-red"></div>
-  <div class="face">
-    <div class="eye"></div>
-    <div class="eye2"></div>
-    <div class="mouth happy"></div>
-  </div>
-  <div class="triangle"></div>
-  <div class="string"></div>
+        <div class="balloon red">
+            <div class="star"></div>
+            <div class="face">
+                <div class="eye"></div>
+                <div class="eye2"></div>
+                <div class="mouth happy"></div>
+            </div>
+            <div class="triangle"></div>
+            <div class="string"></div>
+        </div>
+
+        <div class="balloon blue">
+            <div class="star"></div>
+            <div class="face">
+                <div class="eye"></div>
+                <div class="eye2"></div>
+                <div class="mouth happy"></div>
+            </div>
+            <div class="triangle"></div>
+            <div class="string"></div>
+        </div>
+
+    </div>
+
+    <div id="timer"></div>
+
 </div>
+<div id="frase1"></div>
 
-    <div class="balloon red">
-  <div class="star"></div>
-  <div class="face">
-    <div class="eye"></div>
-    <div class="eye2"></div>
-    <div class="mouth happy"></div>
-  </div>
-  <div class="triangle"></div>
-  <div class="string"></div>
-</div>
-
-    <div class="balloon blue">
-  <div class="star"></div>
-  <div class="face">
-    <div class="eye"></div>
-    <div class="eye2"></div>
-    <div class="mouth happy"></div>
-  </div>
-  <div class="triangle"></div>
-  <div class="string"></div>
-</div>
-
-  </div>
-
-  <div id="timer"></div>
-  </div>
-
-  <div id="buoncomp"></div>
-<div class="footer"><h1>sei scemo</h1></div>
+<div class="footer"><h1></h1></div>
 
 
 <footer>
 
-  <div class="footer"><h1>sei scemooooo ajsbdiasbd inn nij bqinbdinain njn nain</h1></div>
+    <div class="footer"><h1></h1></div>
 
 </footer>
 
