--- a/Luca/WebContent/NewFile.html
+++ b/Luca/WebContent/NewFile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Luca 18</title>
+    <title>Buon Anno</title>
     <meta charset="UTF-8">
     <title>Insert title here</title>
     <script src="Timer.js"></script>
@@ -14,7 +14,7 @@
 <div id="frase"></div>
 
 <div class="container">
-    <div class="palloncini">
+    <!--<div class="palloncini">
 
         <div class="balloon white">
             <div class="star-red"></div>
@@ -50,7 +50,7 @@
         </div>
 
     </div>
-
+-->
     <div id="timer"></div>
 
 </div>
